Fixed bug with responsiveness, circle cropped logo

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,8 +18,8 @@ header {
 }
 
 #header-content {
-  width: 60%;
-  max-width: 1000px;
+  width: 90%;
+  max-width: 900px;
   margin: 0 auto;
   display: flex;
   align-items: center;
@@ -40,9 +40,8 @@ header {
   color: white;
 }
 
-#github-logo {
-  display: flex;
-  align-items: center;
+a {
+  padding: 0;
 }
 
 #github-logo > img {
@@ -51,7 +50,8 @@ header {
 }
 
 main {
-  width: 80vh;
+  width: 90%;
+  max-width: 900px;
   margin: 0 auto;
 }
 
@@ -65,6 +65,19 @@ h2 {
   padding-bottom: 15px;
 }
 
+.link {
+  text-decoration: none;
+  color: black;
+  padding: 1px;
+  border-radius: 3px;
+}
+
+.link:hover {
+  background-color: #ffcc4d;
+  color: white;
+  cursor: pointer;
+}
+
 p {
   font-size: 1.1rem;
   padding: 5px 0;
@@ -72,6 +85,8 @@ p {
 
 select {
   border: 1px solid black;
+  height: 1.5rem;
+  margin: 0 2px;
 }
 
 label > p {
@@ -82,4 +97,5 @@ form {
   margin: 10px 0;
   padding: 20px;
   background-color: #ffcc4d;
+  border-radius: 7px;
 }
